fix: resolve text overlapping in hero section

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -215,7 +215,7 @@
 
 .landing-info h2 {
   margin: 0;
-  margin-top: -20px;
+  margin-top: 20px;
   margin-left: 20px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
@@ -236,12 +236,13 @@
 h2.landing-info-h2 {
   color: #14b8a6;
   font-size: 42px;
-  width: 120%;
+  width: 100%;
   margin: 0;
+  margin-top: 10px;
   font-family: "Geist", sans-serif;
   font-weight: 600;
   position: relative;
-  margin-left: -5px;
+  margin-left: 0;
 }
 
 .landing-h2-2 {
